--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
     "react-leaflet": "^4.2.1",
+    "react-leaflet-core": "^2.1.1",
+    "react-resize-detector": "^9.1.0",
     "stripe": "^10.2.0"
   },
   "devDependencies": {
