--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express": "^4.17.1",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
+    "lucide-react": "^0.288.0",
     "next": "^13.4.8",
     "payload": "latest",
     "payload-admin-bar": "^1.0.6",
@@ -43,7 +44,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
     "react-leaflet": "^4.2.1",
-    "react-leaflet-core": "^2.1.1",
+    "react-leaflet-cluster": "^2.1.0",
+    "react-leaflet-core": "^2.1.0",
     "react-resize-detector": "^9.1.0",
     "stripe": "^10.2.0"
   },
@@ -53,9 +55,10 @@
     "@types/express": "^4.17.9",
     "@types/leaflet": "^1.9.6",
     "@types/node": "18.11.3",
-    "@types/react": "18.0.21",
+    "@types/react": "^18.2.31",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
+    "autoprefixer": "^10.4.16",
     "copyfiles": "^2.4.1",
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
@@ -66,7 +69,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "nodemon": "^2.0.6",
+    "postcss": "^8.4.31",
     "prettier": "^2.7.1",
+    "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   }
