--- a/package.json
+++ b/package.json
@@ -29,13 +29,16 @@
     "@payloadcms/plugin-seo": "^1.0.10",
     "@payloadcms/plugin-stripe": "^0.0.14",
     "@payloadcms/richtext-slate": "latest",
+    "@react-leaflet/core": "^2.1.0",
     "@stripe/react-stripe-js": "^1.16.3",
     "@stripe/stripe-js": "^1.46.0",
+    "@types/leaflet.markercluster": "^1.5.3",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
+    "leaflet.markercluster": "^1.5.3",
     "lucide-react": "^0.288.0",
     "next": "^13.4.8",
     "payload": "latest",
@@ -45,7 +48,6 @@
     "react-hook-form": "^7.45.1",
     "react-leaflet": "^4.2.1",
     "react-leaflet-cluster": "^2.1.0",
-    "react-leaflet-core": "^2.1.0",
     "react-resize-detector": "^9.1.0",
     "stripe": "^10.2.0"
   },
@@ -53,7 +55,7 @@
     "@next/eslint-plugin-next": "^13.1.6",
     "@payloadcms/eslint-config": "^0.0.1",
     "@types/express": "^4.17.9",
-    "@types/leaflet": "^1.9.6",
+    "@types/leaflet": "^1.9.7",
     "@types/node": "18.11.3",
     "@types/react": "^18.2.31",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
