--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-hook-form": "^7.45.1",
     "react-leaflet": "^4.2.1",
     "react-leaflet-cluster": "^2.1.0",
+    "react-leaflet-custom-control": "^1.4.0",
     "react-resize-detector": "^9.1.0",
     "stripe": "^10.2.0"
   },
