--- a/package.json
+++ b/package.json
@@ -37,16 +37,19 @@
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "i18next": "^23.7.6",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "leaflet.markercluster": "^1.5.3",
     "lucide-react": "^0.288.0",
     "next": "^13.4.8",
+    "next-i18next": "^15.0.0",
     "payload": "latest",
     "payload-admin-bar": "^1.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
+    "react-i18next": "^13.5.0",
     "react-leaflet": "^4.2.1",
     "react-leaflet-cluster": "^2.1.0",
     "react-leaflet-custom-control": "^1.4.0",
